@@ -13,11 +13,13 @@ DIST gitlab-ce-8.9.1.tar.gz 21151788 SHA256 f93c32ea9c79e80f705afc3b008cfc52b29c
 DIST gitlab-ce-8.9.2.tar.gz 21152737 SHA256 f1da983b827297ed45ee859293e9abd1b2da401e5c02d4d94deb08971cc019a9 SHA512 dd9fe895a3a9590b8c22fd158c6909b3abe4652721e1defe5dc6ab529fca9954e15b6e0c11be21f2a3a047b43188a23b7b7d75830808f4283838631fcc910b8e WHIRLPOOL 4570ed68e7918ec2cf149bed6fbe551d7e5a3e74e4a7334038f66d3970b77569d16f514ff6aa34f1e0fadf40e474f572e34cda5515e57fb410d46b069c6bfd83
 DIST gitlab-ce-8.9.3.tar.gz 21156182 SHA256 39578df8b98113bbe79f49d1435d9c399729e9b0d42062a60c8d8c11d1fe056b SHA512 e03b448da007145a8869813e39ceb96f3209b5ab79cc1eee06bdfdb8c85392fdb7a7d5bf3c957fb9d55be93ee6f35945e88747ca1770d566dd4a55cdb0170149 WHIRLPOOL c390be29b4da63f222d22e667baa9876cdbba3d0d1d9d3aa22783355dd1989b2f2bb3692e6c17094444518e36bb0e87b972484c7afc3af132ddc3c536aebcaf9
 DIST gitlab-ce-8.9.4.tar.gz 21156625 SHA256 bd2e2342e68b887f35b322f3e15894aa654c0701476ecfd7c4072f70c1752ad9 SHA512 7b60c99746a3f36298a30c396769189c10d129c827ef0b1f52b38b2fc72a3e425ca4b46fdd47cfec7d0680e84ecc37ab478dfaf9fbff45bb3773abab5681c088 WHIRLPOOL 70a698d85526537ec1f965472ebfeab76b6cc1ce8b638fbfa5c433b9ee9411f48284969c1dcac8297e5415e229ec172e38605338d1108aebde5e6645c1350aa1
+DIST gitlab-ce-8.9.5.tar.gz 21555267 SHA256 6f1685d5b2cf36a580467017ba5a4ce59dc13f90ce160e031d883b424e2557d0 SHA512 7d8a6bb7fee72b4b6b877b5484aeacfb1ccbc387b5635c4bd56cc7296b7b107532aac43f25911580906b186504452c9a8a43d8b64e2c5a5b4b8027ef10bc8e52 WHIRLPOOL aaac0b42fe2b97107b868924e6710829376f42df6ed11af7456362463f19e5d4cd6cc9d4616dd1d7e865caa6f420e028fca2abf07746b5fb0ef3cb2c0427aec3
 EBUILD gitlab-ce-8.8.5.ebuild 12342 SHA256 0b528722bb3bc7d232dc6a272973bf8da77992fefa308dabf4b7a9fba8548c18 SHA512 430ee8b469bf43bd8889e9375c49ca83a35d2956c6964e0f1dd07921fbb124a8d7decf60950fbbbc836025d74e73da1e7c89119da2348090d163eb6062739fb4 WHIRLPOOL 3730bf6b32dbc0c3605b15a953114aca56faf859f83672f05ad0b92251697a9cc0778b13d3ba3fd25ddb0858e8ce43b400573f68a605e063ad9bed8597c29fc5
 EBUILD gitlab-ce-8.9.1.ebuild 12336 SHA256 d50f5bb06b8fd2082804e096d372d0caca441d5d24d30a5ab3fdbd78d7cf5aa2 SHA512 91a88f5342bdd9736f9e45ccbd690caf50c51eabd327c419aaca4203d65ab37ce562214d59280a073c0945945bd60d6f523ebb6586cec09a91b9fca16a3f0412 WHIRLPOOL 67ab639a78899f8161ee47f07d983e7bc90442348170b36c873b94475fcd11a0799c89fecfc1f7a3e21fc95b553ffbee23655d3d1fb1368dd83b66de46652bd5
 EBUILD gitlab-ce-8.9.2.ebuild 12343 SHA256 504ae1facfdd479f79d8b1b03cf2a8695f55b9a653923c4c75bf7ede96d5eba0 SHA512 9a59ae1aaa358d94eb1548d940fb6ac100f38387f5f1d70b8798f6ac7d820317575e7e4f018a81c3a1a8a6b7ae8450625fcd0b1f7316f21e93a2e3936ae82236 WHIRLPOOL 5800a3894693f8152778508119f87011c5fe25b6e90f7d930208b0e68aac48ed90ef3a5be86a6c87198d8bd7ac440c8f08d79d525ab3f13d32a0c79e63e95aa0
 EBUILD gitlab-ce-8.9.3.ebuild 12343 SHA256 504ae1facfdd479f79d8b1b03cf2a8695f55b9a653923c4c75bf7ede96d5eba0 SHA512 9a59ae1aaa358d94eb1548d940fb6ac100f38387f5f1d70b8798f6ac7d820317575e7e4f018a81c3a1a8a6b7ae8450625fcd0b1f7316f21e93a2e3936ae82236 WHIRLPOOL 5800a3894693f8152778508119f87011c5fe25b6e90f7d930208b0e68aac48ed90ef3a5be86a6c87198d8bd7ac440c8f08d79d525ab3f13d32a0c79e63e95aa0
 EBUILD gitlab-ce-8.9.4.ebuild 12343 SHA256 504ae1facfdd479f79d8b1b03cf2a8695f55b9a653923c4c75bf7ede96d5eba0 SHA512 9a59ae1aaa358d94eb1548d940fb6ac100f38387f5f1d70b8798f6ac7d820317575e7e4f018a81c3a1a8a6b7ae8450625fcd0b1f7316f21e93a2e3936ae82236 WHIRLPOOL 5800a3894693f8152778508119f87011c5fe25b6e90f7d930208b0e68aac48ed90ef3a5be86a6c87198d8bd7ac440c8f08d79d525ab3f13d32a0c79e63e95aa0
+EBUILD gitlab-ce-8.9.5.ebuild 12343 SHA256 504ae1facfdd479f79d8b1b03cf2a8695f55b9a653923c4c75bf7ede96d5eba0 SHA512 9a59ae1aaa358d94eb1548d940fb6ac100f38387f5f1d70b8798f6ac7d820317575e7e4f018a81c3a1a8a6b7ae8450625fcd0b1f7316f21e93a2e3936ae82236 WHIRLPOOL 5800a3894693f8152778508119f87011c5fe25b6e90f7d930208b0e68aac48ed90ef3a5be86a6c87198d8bd7ac440c8f08d79d525ab3f13d32a0c79e63e95aa0
 EBUILD gitlab-ce-9999.ebuild 12347 SHA256 b7850042b023eb505544b47fcf8896bc0319ce96808d29b462d527aacb25d6c0 SHA512 2fc140d00fde6e248ea7cba17ce6e0243dcdad76c497d052a9bac5abdb6618b27ee2a1cbeb86aa5f4718688746abf1be499830af2fea848aec63ec870f4fa72a WHIRLPOOL 7f2de913692b0d363cc8f24a152302de2feaa70db97069049c3c15515b76da330dbbb11ce868f6d59e22e2c1fd5c7ef3874197d2bc5eb36b60e52056a02dd028
-MISC ChangeLog 1607 SHA256 07bb67157c24f7834a68550f223fb7b2841c2aff91492b62df7ac33d46446791 SHA512 d175ad2e40fc28e6f8baf49f6127c644a7cffbc26cd68572e104e00020fa00f15a2d2a16f32ecdb87adbb6376280f622b23e208643d72bdaa29d536023cd52ca WHIRLPOOL 6896b3e71a44b15d9426a347bdd1ca0b8d394935892b2ae7accd5118b5cde0a4b7b306f10f3fcb3df03d62a4e03b05608d560614e00f0f2bea7fa47a7d6c92f9
+MISC ChangeLog 1817 SHA256 bdf6a0164485d72cc113c8c97558eb45b3e3cd613c9a89b33302f0db984ca765 SHA512 36cc851d2794d182adc244623a3b095ee08f97f43c1b58fe463c999e660bd653b62f16a4106d945446247c0f30af08b15cb0e9b4be89d1c650464941d500b1e9 WHIRLPOOL 1f2dd2c8d6e978cbf98f0f78ed7c45a4b1949be23722547cee8afd9ad073141210c24008335553cc74eeade82669dc2b7294d16a29a0cbab9c7a251f8f2ec617
 MISC metadata.xml 545 SHA256 1b7fc44d811e1ab7638fe4a40253f49d5f1071872d3020c22c4f67662750cb2f SHA512 86f47d297892bccfefa087d93936296f5647993a9ec8e3f47907a6859cbf385e5bc6f00502d7836c9e8d9efef2b6725bf145b0150924c2082b2bd164469ef6ea WHIRLPOOL 6bfb8a55684d68c8bfa6e025a0be965f7b815394ee0896dd2a13cfb524e3cf3f3149acc9072897e30a1842060389576aac07ea8beb4a8b0bfc3e8eab3723f2a1
